[gd_scene load_steps=2 format=3 uid="uid://dpx1hflwl42x10"]

[ext_resource type="Script" path="res://scripts/LineupEditor3D.gd" id="1_9hfv8"]

[node name="LineupEditor3D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_9hfv8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 0

[node name="Camera3D" type="Camera3D" parent="ViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 25)
fov = 60.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="ViewportContainer/SubViewport"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 8, 0)
light_energy = 2.0
shadow_enabled = true

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopPanel" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 1900.0
offset_bottom = 80.0

[node name="TitleLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
size_flags_horizontal = Control.SIZE_EXPAND_FILL
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "EDITOR DE ALINEACIÓN 3D"
horizontal_alignment = 1

[node name="FormationSelector" type="OptionButton" parent="UI/TopPanel"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)

[node name="SaveButton" type="Button" parent="UI/TopPanel"]
layout_mode = 2
custom_minimum_size = Vector2(120, 50)
text = "GUARDAR"

[node name="BackButton" type="Button" parent="UI/TopPanel"]
layout_mode = 2
custom_minimum_size = Vector2(100, 50)
text = "VOLVER"

[node name="MainContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
offset_bottom = -100.0

[node name="FieldContainer" type="VBoxContainer" parent="UI/MainContainer"]
layout_mode = 2
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="FieldTitle" type="Label" parent="UI/MainContainer/FieldContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "CAMPO DE JUEGO 3D"
horizontal_alignment = 1

[node name="Field3D" type="Control" parent="UI/MainContainer/FieldContainer"]
layout_mode = 2
size_flags_vertical = Control.SIZE_EXPAND_FILL
custom_minimum_size = Vector2(800, 600)

[node name="FieldOverlay" type="Control" parent="UI/MainContainer/FieldContainer/Field3D"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayersPanel" type="VBoxContainer" parent="UI/MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)
modulate = Color(1, 1, 1, 0.95)

[node name="PlayersTitle" type="Label" parent="UI/MainContainer/PlayersPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "JUGADORES DISPONIBLES"
horizontal_alignment = 1

[node name="FilterContainer" type="HBoxContainer" parent="UI/MainContainer/PlayersPanel"]
layout_mode = 2
alignment = 1

[node name="PositionFilter" type="OptionButton" parent="UI/MainContainer/PlayersPanel/FilterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
text = "Todas las posiciones"

[node name="SearchBox" type="LineEdit" parent="UI/MainContainer/PlayersPanel/FilterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
placeholder_text = "Buscar jugador..."

[node name="ScrollContainer" type="ScrollContainer" parent="UI/MainContainer/PlayersPanel"]
layout_mode = 2
size_flags_vertical = Control.SIZE_EXPAND_FILL

[node name="PlayersContainer" type="VBoxContainer" parent="UI/MainContainer/PlayersPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="Footer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_bottom = -20.0
alignment = 1

[node name="CameraControls" type="VBoxContainer" parent="UI/Footer"]
layout_mode = 2

[node name="CameraLabel" type="Label" parent="UI/Footer/CameraControls"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Controles de Cámara"
horizontal_alignment = 1

[node name="CameraButtons" type="HBoxContainer" parent="UI/Footer/CameraControls"]
layout_mode = 2
alignment = 1

[node name="ToggleCameraButton" type="Button" parent="UI/Footer/CameraControls/CameraButtons"]
layout_mode = 2
custom_minimum_size = Vector2(150, 40)
text = "Rotar Cámara"

[node name="ResetViewButton" type="Button" parent="UI/Footer/CameraControls/CameraButtons"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Vista Inicial"

[node name="TopViewButton" type="Button" parent="UI/Footer/CameraControls/CameraButtons"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Vista Cenital"
